# Mandelbrot-visualizer

./: README.md  colors.py  game.py  image.py  m.py  main.py  mandel.py  mandelbrot.py  pyproject.toml  viewport.py
interactive/: colors.py  game.py  mandelbrot.py
