[project]
name = "mandelbrot"
version = "0.1.0"
description = "Mandelbrot set plotter in python with pygame."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=1.26,<2.0)",
    "numba (>=0.61.2,<0.62.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mandelbrot = "game:main"